@@ -1,3 +1,8 @@
+2011-12-16  Roland Grunberg  <rgrunber@redhat.com>
+
+	* src/org/eclipse/linuxtools/oprofile/launch/launching/OprofileManualLaunchConfigurationDelegate.java
+		(preExec): Set the current project for manual launches.
+
 2011-09-21  Roland Grunberg  <rgrunber@redhat.com>
 
 	* src/org/eclipse/linuxtools/oprofile/launch/configuration/OprofileSetupTab.java: 
